[package]
name = "app"
version = "0.1.0"
authors = ["HNephilim <erickdpiva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rot = {path = "../ROT_Engine"}
rot_layer = {path = "../ROT_Layer"}
rot_events = {path = "../ROT_Events"}
rot_wgpu = {path = "../ROT_WGPU_Renderer"}
log = "0.4.14"
futures = "0.3.14"
nalgebra = "0.26.1"