[package]
name = "rot"
version = "0.1.0"
authors = ["HNephilim <erickdpiva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
fern = {version = "0.6.0", features = ["colored"]}
chrono = "0.4.19"