[package]
name = "rot"
version = "0.1.0"
authors = ["HNephilim <erickdpiva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
fern = {version = "0.6.0", features = ["colored"]}
chrono = "0.4.19"
winit = "0.24.0"
wgpu = "0.7.1"

rot_wgpu = {path = "../ROT_WGPU_Renderer"}
#rot_vk = {path = "../ROT_VK_Renderer"}
rot_events = {path = "../ROT_Events"}
rot_layer = {path = "../ROT_Layer"}
rot_gui = {path = "../ROT_GUI_IMGUI"}