[package]
name = "rot_gui"
version = "0.1.0"
authors = ["HNephilim <erickdpiva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rot_events = {path = "..\\ROT_Events"}
rot_layer = {path = "..\\ROT_Layer"}

imgui = "0.7.0"
winit = "0.24.0"