[package]
name = "rot_layer"
version = "0.1.0"
authors = ["HNephilim <erickdpiva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
rot_events = {path = "../ROT_Events"}
rot_wgpu = {path = "../ROT_WGPU_Renderer"}