[package]
name = "rot_vk"
version = "0.1.0"
authors = ["HNephilim <erickdpiva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
erupt = "0.18.0+174"
winit = "0.24.0"
rot_events = {path = "..\\ROT_Events"}
