[package]
name = "rot_vk"
version = "0.1.0"
authors = ["HNephilim <erickdpiva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
ash = "0.32.1"
ash-window = "0.6.0"
vk-mem = "0.2.2"
winit = "0.24.0"
nalgebra = "0.26.1"
rot_events = {path = "..\\ROT_Events"}
