[package]
name = "rot_wgpu"
version = "0.1.0"
authors = ["HNephilim <erickdpiva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
nalgebra = "0.26.1"
log = "0.4.14"
optick = "1.3.4"
optick-attr = "0.3.0"

image = "0.23.14"
bytemuck = "1.5.1"

rot_events = {path = "../ROT_Events"}


[dependencies.wgpu]
version = "0.7"
features = ["vulkan-portability"]


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"

